# hal_altera

./: CMakeLists.txt
altera_hal/HAL/src/: altera_common.c
drivers/altera_avalon_jtag_uart/HAL/src/: altera_avalon_jtag_uart_init.c  altera_avalon_jtag_uart_ioctl.c  altera_avalon_jtag_uart_read.c  altera_avalon_jtag_uart_write.c
drivers/altera_msgdma/HAL/src/: altera_msgdma.c
